crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_clear_trigger_disabled.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.clear_trigger_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "clear-trigger",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            Label,
        ),
        String(
            "Clear value",
        ),
    ),
    (
        TabIndex,
        String(
            "-1",
        ),
    ),
    (
        Disabled,
        Bool(
            true,
        ),
    ),
    (
        Type,
        String(
            "button",
        ),
    ),
]
