crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_content_multi.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.content_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "content",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            Label,
        ),
        String(
            "Suggestions",
        ),
    ),
    (
        Aria(
            MultiSelectable,
        ),
        String(
            "true",
        ),
    ),
    (
        Id,
        String(
            "combo-content",
        ),
    ),
    (
        Role,
        String(
            "listbox",
        ),
    ),
]
