crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_control.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.control_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "control",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
]
