crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_description.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.description_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "description",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Id,
        String(
            "combo-description",
        ),
    ),
]
