crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_empty.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.empty_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "empty",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Id,
        String(
            "combo-empty",
        ),
    ),
    (
        Role,
        String(
            "none",
        ),
    ),
]
