crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_error_message.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.error_message_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "error-message",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            Live,
        ),
        String(
            "polite",
        ),
    ),
    (
        Id,
        String(
            "combo-error-message",
        ),
    ),
]
