crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_hidden_input.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.hidden_input_attrs())
---
[
    (
        Aria(
            Hidden,
        ),
        String(
            "true",
        ),
    ),
    (
        TabIndex,
        String(
            "-1",
        ),
    ),
    (
        Form,
        String(
            "checkout",
        ),
    ),
    (
        Name,
        String(
            "fruit",
        ),
    ),
    (
        Type,
        String(
            "hidden",
        ),
    ),
    (
        Value,
        String(
            "1",
        ),
    ),
]
